# js-dependency-analyze

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
